change https to http, fix css landingPage

--- a/EVDealerSales.Presentation/Pages/Home/LandingPage.cshtml
+++ b/EVDealerSales.Presentation/Pages/Home/LandingPage.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/LandingPage"
+﻿@page
 @model EVDealerSales.Presentation.Pages.Home.LandingPagecshtmlModel
 @{
     ViewData["Title"] = "Home";
