fix view test drive

--- a/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
+++ b/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-page="/TestDrive/Register">
-                                    <i class="bi bi-calendar-check me-1"></i>Test Drive
+                                    Test Drive
                                 </a>
                             </li>
                         }
