--- a/EVDealerSales.Presentation/Pages/Vehicle/DetailVehicles.cshtml
+++ b/EVDealerSales.Presentation/Pages/Vehicle/DetailVehicles.cshtml
@@ -96,7 +96,7 @@
             </div>
 
             <div class="detail-cta-section">
-                <a asp-page="/Staff/CheckCustomerEmail" asp-route-vehicleId="@Model.Vehicle.Id" class="detail-appointment-btn">
+                <a asp-page="/TestDrive/Register" asp-route-vehicleId="@Model.Vehicle.Id" class="detail-appointment-btn">
                     <i class="fas fa-calendar-check"></i>
                     <span>Make an Appointment</span>
                 </a>
